# appdemo

./: basedatos.db  main.py  pyproject.toml
