[project]
name = "appdemo"
version = "0.1.0"
description = ""
authors = [
    {name = "ximena",email = "l19590344@sjuanrio.tecnm.mx"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sanic (>=24.12.0,<25.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
]

[tool.poetry]
packages = [{include = "appdemo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
